[gd_scene load_steps=12 format=2]

[ext_resource path="res://AllWin/styleboxflat.tres" type="StyleBox" id=1]
[ext_resource path="res://Bgart/enemy spaceship.png" type="Texture" id=2]
[ext_resource path="res://spite/metrorite.png" type="Texture" id=3]
[ext_resource path="res://spite/spaceship (1).png" type="Texture" id=4]
[ext_resource path="res://Select_Level.gd" type="Script" id=5]
[ext_resource path="res://sound/Chill.wav" type="AudioStream" id=6]
[ext_resource path="res://Mainmenubutton.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.611765, 0.717647, 1, 1 )
border_width_left = 50
border_width_top = 50
border_width_right = 50
border_width_bottom = 50
border_color = Color( 0.392157, 0.27451, 0.713726, 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://font/Superspace Bold ver 1.00.otf"

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 640, 340, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
angular_velocity = 50.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 10.0
scale_random = 1.0

[node name="Select_Level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Panel/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/MarginContainer/CenterContainer"]
margin_left = 312.0
margin_top = 19.0
margin_right = 712.0
margin_bottom = 581.0
custom_constants/separation = 35

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 90.0
custom_colors/font_color = Color( 0.239216, 0.0235294, 0.403922, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Select Level"
align = 1

[node name="Tut" type="Button" parent="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 400.0
margin_bottom = 149.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "Tutorial"

[node name="Mercury" type="Button" parent="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 400.0
margin_bottom = 208.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "Mercury"

[node name="Venus" type="Button" parent="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 400.0
margin_bottom = 267.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "Venus"

[node name="Mars" type="Button" parent="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 400.0
margin_bottom = 326.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "Mars"

[node name="Jupiter" type="Button" parent="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 361.0
margin_right = 400.0
margin_bottom = 385.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "Jupiter"

[node name="Saturn" type="Button" parent="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 420.0
margin_right = 400.0
margin_bottom = 444.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "Saturn"

[node name="Uranus" type="Button" parent="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 479.0
margin_right = 400.0
margin_bottom = 503.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "uranus"

[node name="neptune" type="Button" parent="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 538.0
margin_right = 400.0
margin_bottom = 562.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "neptune"

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 83.8467, 434.071 )
rotation = 0.603884
scale = Vector2( 0.232575, 0.207281 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 198, 338 )
rotation = 0.603884
scale = Vector2( 0.232575, 0.207281 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 874, 136 )
rotation = 0.603884
scale = Vector2( 0.456105, 0.475346 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="CanvasLayer"]
position = Vector2( 802.007, 206.667 )
rotation = 0.603884
scale = Vector2( 0.332917, 0.386464 )
texture = ExtResource( 3 )

[node name="Mainmenu" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 10

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Particles2D" type="Particles2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 510, 242 )
amount = 20
lifetime = 5.0
randomness = 1.0
process_material = SubResource( 4 )

[node name="backgroundplayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer/Tut" to="." method="_on_Tut_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer/Mercury" to="." method="_on_Mercury_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer/Venus" to="." method="_on_Venus_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer/Mars" to="." method="_on_Mars_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer/Jupiter" to="." method="_on_Jupiter_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer/Saturn" to="." method="_on_Saturn_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer/Uranus" to="." method="_on_Uranus_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/CenterContainer/VBoxContainer/neptune" to="." method="_on_neptune_pressed"]
[connection signal="pressed" from="CanvasLayer/Mainmenu" to="." method="_on_Mainmenu_pressed"]
